--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -1,16 +1,26 @@
 devices:
 - description: My laptop
   identifier: my-laptop
-  ip_address: 10.10.10.123
-  mac_address: AB:CD:EF:01:02:02
+  ip_interfaces:
+    ethernet:
+      ip_address: 10.10.10.123
+      mac_address: AB:CD:EF:01:02:02
+    wifi:
+      ip_address: 10.10.10.124
+      mac_address: AB:CD:EF:01:02:03
+
 - description: My smartwatch
   identifier: my-smartwatch
   ble_address: 9d329f8ba3c24ae0a494b195dda27d41
+
 - description: My phone
   identifier: my-phone
-  ip_address: 10.10.10.124
-  mac_address: AB:CD:EF:01:02:03
+  ip_interfaces:
+    wifi:
+      ip_address: 10.10.10.124
+      mac_address: AB:CD:EF:01:02:03
   ble_address: 9d329f8ba3c24ae0a494b195dda27d42
+
 mqtt_server:
   hostname: 192.10.20.1
   port: 1883
