--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -29,7 +29,7 @@ mqtt_server:
 server:
   address: 0.0.0.0
   port: 8080
-  swagger_ui_url: https://validator.swagger.io/
+  swagger_ui_url: https://validator.swagger.io
 
 trackers:
 - ipv4
