--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -1,25 +1,31 @@
 devices:
   my-laptop:
     description: My laptop
-    ip_interfaces:
-      ethernet:
-        ip_address: 10.10.10.123
-        mac_address: AB:CD:EF:01:02:02
-      wifi:
-        ip_address: 10.10.10.124
-        mac_address: AB:CD:EF:01:02:03
+    interfaces:
+      - type: ethernet
+        address: AB:CD:EF:01:02:02
+      - type: ipv4
+        address: 10.10.10.123
+      - type: wifi
+        address: AB:CD:EF:01:02:03
+      - type: ipv4
+        address: 10.10.10.124
 
   my-smartwatch:
     description: My smartwatch
-    ble_address: 9d329f8ba3c24ae0a494b195dda27d41
+    interfaces:
+      - type: ble
+        address: 9d329f8ba3c24ae0a494b195dda27d41
 
   my-phone:
     description: My phone
-    ip_interfaces:
-      wifi:
-        ip_address: 10.10.10.124
-        mac_address: AB:CD:EF:01:02:03
-    bt_address: AA:BB:CC:DD:EE
+    interfaces:
+      - type: wifi
+        address: AB:CD:EF:01:02:03
+      - type: ipv4
+        address: 10.10.10.124
+      - type: bluetooth
+        address: AA:BB:CC:DD:EE
 
 mqtt_server:
   enabled: false
