--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,4 +1,4 @@
-ARG ALPINE_VERSION
+ARG ALPINE_VERSION=latest
 
 FROM alpine:${ALPINE_VERSION}
 
@@ -8,6 +8,13 @@ VOLUME [ "/etc/myhome", "/var/lib/myhome" ]
 
 COPY deployment/config.yaml /etc/myhome/config.yaml
 COPY build/myhome-presence-linux-${TARGETARCH} /myhome-presence
+
+RUN addgroup -S myhome && \
+	adduser -S -D -G myhome -H -s /bin/sh myhome
+
+ENV HOME=/
+
+USER myhome
 
 EXPOSE 8080
 
