Configure go-releaser

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,13 +1,13 @@
-ARG ALPINE_VERSION=latest
-
-FROM alpine:${ALPINE_VERSION}
+FROM alpine:3.20
 
 ARG TARGETARCH
+ARG BUILD_DIR=build
+ARG BINARY=myhome-presence-linux-${TARGETARCH}
 
 VOLUME [ "/etc/myhome", "/var/lib/myhome" ]
 
 COPY deployment/config.yaml /etc/myhome/config.yaml
-COPY build/myhome-presence-linux-${TARGETARCH} /myhome-presence
+COPY ${BUILD_DIR}/${BINARY} /myhome-presence
 
 RUN addgroup -S myhome && \
 	adduser -S -D -G myhome -H -s /bin/sh myhome
